<resources>
    <string name="app_name">TextApp</string>
    <string name="hello_app">Hello App</string>
    <string name="username">userName</string>
    <string name="email1">Email</string>
    <string name="buttons">Button</string>
    <string name="sign_up1">Sign Up</string>
    <string name="userprofile">UserProfile</string>
    <string name="textview">TextView</string>
    <string name="name">name</string>
    <string name="emails">emails</string>
    <string name="password1">Password</string>
    <string name="Uname">Name</string>
    <string name="sign1">Sign</string>
    <string name="in">In</string>
    <string name="username2">Username</string>
    <string name="NameUser">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">reset</string>
    <string name="sign">Sign</string>
    <string name="up">Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="usernames">Username</string>
    <string name="logins">Login</string>
    <string name="username12">Username</string>
    <string name="_10_digit">10 digit</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="go_to_register">Go to register</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login1">Login</string>
    <string name="Loging_UserName">UserName</string>
    <string name="log_password">password</string>
    <string name="button">Button</string>
    <string name="FirebaseUserName" />
    <string name="enter_username">Enter UserName</string>
    <string name="enter_email">Enter Email</string>
    <string name="password_log">password</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="login">Login</string>

</resources>